@@ -82,6 +82,20 @@ name|IndexReader
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
+import|;
+end_import
+
 begin_comment
 comment|/** Matches spans which are near one another.  One can specify<i>slop</i>, the  * maximum number of intervening unmatched positions, as well as whether  * matches are required to be in-order. */
 end_comment
@@ -538,6 +552,123 @@ argument_list|,
 name|reader
 argument_list|)
 return|;
+block|}
+DECL|method|rewrite
+specifier|public
+name|Query
+name|rewrite
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|SpanNearQuery
+name|clone
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|clauses
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|SpanQuery
+name|c
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|clauses
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|SpanQuery
+name|query
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|c
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|query
+operator|!=
+name|c
+condition|)
+block|{
+comment|// clause rewrote: must clone
+if|if
+condition|(
+name|clone
+operator|==
+literal|null
+condition|)
+name|clone
+operator|=
+operator|(
+name|SpanNearQuery
+operator|)
+name|this
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|clone
+operator|.
+name|clauses
+operator|.
+name|set
+argument_list|(
+name|i
+argument_list|,
+name|query
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|clone
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+name|clone
+return|;
+comment|// some clauses rewrote
+block|}
+else|else
+block|{
+return|return
+name|this
+return|;
+comment|// no clauses rewrote
+block|}
 block|}
 comment|/** Returns true iff<code>o</code> is equal to this. */
 DECL|method|equals
