@@ -52,6 +52,20 @@ name|IndexReader
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
+import|;
+end_import
+
 begin_comment
 comment|/** Removes matches which overlap with another SpanQuery. */
 end_comment
@@ -602,6 +616,122 @@ return|;
 block|}
 block|}
 return|;
+block|}
+DECL|method|rewrite
+specifier|public
+name|Query
+name|rewrite
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|SpanNotQuery
+name|clone
+init|=
+literal|null
+decl_stmt|;
+name|SpanQuery
+name|rewrittenInclude
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|include
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rewrittenInclude
+operator|!=
+name|include
+condition|)
+block|{
+name|clone
+operator|=
+operator|(
+name|SpanNotQuery
+operator|)
+name|this
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|clone
+operator|.
+name|include
+operator|=
+name|rewrittenInclude
+expr_stmt|;
+block|}
+name|SpanQuery
+name|rewrittenExclude
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|exclude
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rewrittenExclude
+operator|!=
+name|include
+condition|)
+block|{
+if|if
+condition|(
+name|clone
+operator|==
+literal|null
+condition|)
+name|clone
+operator|=
+operator|(
+name|SpanNotQuery
+operator|)
+name|this
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|clone
+operator|.
+name|exclude
+operator|=
+name|rewrittenExclude
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|clone
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+name|clone
+return|;
+comment|// some clauses rewrote
+block|}
+else|else
+block|{
+return|return
+name|this
+return|;
+comment|// no clauses rewrote
+block|}
 block|}
 block|}
 end_class
