@@ -96,6 +96,20 @@ name|PriorityQueue
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|Query
+import|;
+end_import
+
 begin_comment
 comment|/** Matches the union of its clauses.*/
 end_comment
@@ -308,6 +322,123 @@ block|}
 return|return
 name|terms
 return|;
+block|}
+DECL|method|rewrite
+specifier|public
+name|Query
+name|rewrite
+parameter_list|(
+name|IndexReader
+name|reader
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|SpanOrQuery
+name|clone
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|clauses
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|SpanQuery
+name|c
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|clauses
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|SpanQuery
+name|query
+init|=
+operator|(
+name|SpanQuery
+operator|)
+name|c
+operator|.
+name|rewrite
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|query
+operator|!=
+name|c
+condition|)
+block|{
+comment|// clause rewrote: must clone
+if|if
+condition|(
+name|clone
+operator|==
+literal|null
+condition|)
+name|clone
+operator|=
+operator|(
+name|SpanOrQuery
+operator|)
+name|this
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|clone
+operator|.
+name|clauses
+operator|.
+name|set
+argument_list|(
+name|i
+argument_list|,
+name|query
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|clone
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+name|clone
+return|;
+comment|// some clauses rewrote
+block|}
+else|else
+block|{
+return|return
+name|this
+return|;
+comment|// no clauses rewrote
+block|}
 block|}
 DECL|method|toString
 specifier|public
